crates/oxc_react_compiler/tests/snapshots/alias-capture-in-method-receiver.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/alias-capture-in-method-receiver.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = someObj();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const a = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		const x = [];
		x.push(a);
		t1 = [x, a];
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
