crates/oxc_react_compiler/tests/snapshots/alias-computed-load.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/alias-computed-load.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(2);
	let x;
	if ($[0] !== a) {
		x = { a };
		const y = {};
		y.x = x["a"];
		mutate(y);
		$[0] = a;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
