crates/oxc_react_compiler/tests/snapshots/alias-nested-member-path.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/alias-nested-member-path.js
---
import { c as _c } from "react/compiler-runtime";
function component() {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const z = [];
		const y = {};
		y.z = z;
		x = {};
		x.y = y;
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: [],
	isComponent: false
};
