crates/oxc_react_compiler/tests/snapshots/aliased_usememo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/aliased_usememo.js
---
import { c as _c } from "react/compiler-runtime";
import { useMemo as myMemo } from "react";
function Component(t0) {
	const $ = _c(2);
	const { x } = t0;
	const v = x * 2;
	let t1;
	if ($[0] !== v) {
		t1 = <div>{v}</div>;
		$[0] = v;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
