crates/oxc_react_compiler/tests/snapshots/align-scopes-iife-return-modified-later-logical.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/align-scopes-iife-return-modified-later-logical.ts
---
import { c as _c } from "react/compiler-runtime";
import { getNull } from "shared-runtime";
function Component(props) {
	const $ = _c(2);
	let items;
	if ($[0] !== props.a) {
		items = getNull() ?? [];
		items.push(props.a);
		$[0] = props.a;
		$[1] = items;
	} else {
		items = $[1];
	}
	return items;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: {} }]
};
